# metamath-knife

./: Cargo.toml  LICENSE-MIT  README.md  subset.mm
.cargo/: config
.github/workflows/: verify.yml
metamath-knife/: Cargo.toml
metamath-knife/src/: list_stmt.rs  main.rs  minimizer.rs
metamath-rs/: Cargo.toml  README.md
metamath-rs/src/: axiom_use.rs  bit_set.rs  comment_parser.rs  comment_parser_tests.rs  database.rs  defck.rs  defck_tests.rs  diag.rs  export.rs  export_deps.rs  formula.rs  gen_proof.rs  grammar.rs  grammar_tests.rs  lib.rs  line_cache.rs  nameck.rs  outline.rs  parser.rs  parser_tests.rs  proof.rs  scopeck.rs  segment.rs  segment_set.rs  statement.rs  tree.rs  typesetting.rs  usage_tests.rs  util.rs  verify.rs  verify_markup.rs  verify_tests.rs
src/: axiom_use.rs  bit_set.rs  commands.rs  comment_parser.rs  comment_parser_tests.rs  database.rs  defck.rs  defck_tests.rs  diag.rs  discouraged.rs  export.rs  export_deps.rs  formula.rs  formula_tests.rs  framegen.rs  grammar.rs  grammar_tests.rs  lib.rs  line_cache.rs  main.rs  nameck.rs  outline.rs  parser.rs  parser_tests.rs  proof.rs  scopeck.rs  segment.rs  segment_set.rs  statement.rs  tree.rs  typesetting.rs  util.rs  util_tests.rs  verify.rs  verify_definitions.rs  verify_markup.rs
