[package]
authors = ["David A. Wheeler <dwheeler@dwheeler.com>", "Stefan O'Rear <sorear2@gmail.com>"]
license = "MIT OR Apache-2.0"
name = "metamath-knife"
readme = "README.md"
version = "3.1.2"
description = "A parallel and incremental verifier for Metamath databases"
repository = "https://github.com/david-a-wheeler/metamath-knife"
keywords = ["theorem", "proving", "verifier", "proof", "assistant"]
categories = ["command-line-utilities", "development-tools", "mathematics"]
edition = "2018"

[dependencies]
filetime = "0.2"
fnv = "1.0"
regex = "1.5"
tinyvec = "1.5"
log = "0.4.14"
annotate-snippets = "0.9.1"
strfmt= "0.1.6"

# Dependencies for standalone executable, not needed for a library
clap = "2.33"
simple_logger = "1.13"

# Optional dependencies
dot-writer = { version = "0.1.2", optional = true }

[features]
default = ["annotate-snippets/color"]
dot = ["dot-writer"]

[profile]

[profile.release]
codegen-units = 1
debug = true

[profile.dev]
opt-level = 1
codegen-units = 4

[profile.test]
codegen-units = 4

[[bin]]
name = "metamath-knife"
path = "src/main.rs"
doc = false