[workspace]
members = [
    "metamath-rs",
    "metamath-knife",
]
resolver = "2"

[workspace.package]
authors = ["David A. Wheeler <dwheeler@dwheeler.com>", "Stefan O'Rear <sorear2@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A parallel and incremental verifier for Metamath databases"
repository = "https://github.com/metamath/metamath-knife"
keywords = ["theorem", "proving", "verifier", "proof", "assistant"]
categories = ["command-line-utilities", "development-tools", "mathematics"]
edition = "2021"

[profile]

[profile.release]
codegen-units = 1
debug = true

[profile.dev]
opt-level = 1
codegen-units = 4

[profile.test]
codegen-units = 4
