[package]
name = "metamath-knife"
readme = "metamath-knife/README.md"
description = "A command-line tool for Metamath, including parallel and incremental verifier for Metamath databases"
version = "0.3.9"
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
simple_logger = "5.0"
annotate-snippets = "0.11"
metamath-rs = { path = "../metamath-rs" }

[[bin]]
name = "metamath-knife"
path = "src/main.rs"
doc = false

[features]
default = ["verify_markup"]
dot = ["metamath-rs/dot"]
xml = ["metamath-rs/xml"]
verify_markup = ["metamath-rs/verify_markup"]
